Anaconda - updated tensorflow gpu enviornment

--- a/Anaconda_Setup/tensorflow_gpu_environment.yml
+++ b/Anaconda_Setup/tensorflow_gpu_environment.yml
@@ -26,91 +26,5 @@ dependencies:
   - wheel=0.30.0=py35h38a90bc_1
   - wincertstore=0.2=py35hfebbdb8_0
   - zlib=1.2.11=h8395fce_2
-  - pip:
-    - absl-py==0.1.10
-    - alabaster==0.7.10
-    - astroid==1.6.1
-    - babel==2.5.3
-    - bleach==1.5.0
-    - chardet==3.0.4
-    - cloudpickle==0.5.2
-    - colorama==0.3.9
-    - cvxcanon==0.1.1
-    - cycler==0.10.0
-    - decorator==4.2.1
-    - dill==0.2.7.1
-    - docutils==0.14
-    - entrypoints==0.2.3
-    - fastcache==1.0.2
-    - html5lib==0.9999999
-    - idna==2.6
-    - imagesize==0.7.1
-    - ipykernel==4.8.1
-    - ipython==6.2.1
-    - ipython-genutils==0.2.0
-    - isort==4.3.3
-    - jedi==0.11.1
-    - jinja2==2.10
-    - jsonschema==2.6.0
-    - jupyter-client==5.2.2
-    - jupyter-core==4.4.0
-    - keras==2.1.3
-    - lazy-object-proxy==1.3.1
-    - markdown==2.6.11
-    - markupsafe==1.0
-    - matplotlib==2.1.2
-    - mccabe==0.6.1
-    - mistune==0.8.3
-    - multiprocess==0.70.5
-    - nbconvert==5.3.1
-    - nbformat==4.4.0
-    - numpydoc==0.7.0
-    - pandas==0.22.0
-    - pandocfilters==1.4.2
-    - parso==0.1.1
-    - pickleshare==0.7.4
-    - prompt-toolkit==1.0.15
-    - protobuf==3.5.1
-    - psutil==5.4.3
-    - pycodestyle==2.3.1
-    - pydot==1.0.29
-    - pyflakes==1.6.0
-    - pygments==2.2.0
-    - pylint==1.8.2
-    - pyparsing==2.2.0
-    - pyqt5==5.10
-    - pyreadline==2.1
-    - python-dateutil==2.6.1
-    - pytz==2018.3
-    - pyyaml==3.12
-    - pyzmq==17.0.0
-    - qtawesome==0.4.4
-    - qtconsole==4.3.1
-    - qtpy==1.3.1
-    - requests==2.18.4
-    - rope==0.10.7
-    - scikit-learn==0.19.1
-    - scipy==1.0.0
-    - scs==2.0.2
-    - seaborn==0.8.1
-    - simplegeneric==0.8.1
-    - sip==4.19.7
-    - sklearn==0.0
-    - snowballstemmer==1.2.1
-    - sphinx==1.6.7
-    - sphinxcontrib-websupport==1.0.1
-    - spyder==3.2.6
-    - tensorflow==1.5.0
-    - tensorflow-gpu==1.5.0
-    - tensorflow-tensorboard==1.5.1
-    - testpath==0.3.1
-    - toolz==0.9.0
-    - tornado==4.5.3
-    - traitlets==4.3.2
-    - urllib3==1.22
-    - wcwidth==0.1.7
-    - werkzeug==0.14.1
-    - win-unicode-console==0.5
-    - wrapt==1.10.11
-prefix: C:\ProgramData\Anaconda2_new\envs\tensorflow
+prefix: C:\ProgramData\Anaconda3\envs\tensorflow
 
