updated auto installer & anaconda env file

--- a/Anaconda_Setup/linux_tensorflow_gpu.yml
+++ b/Anaconda_Setup/linux_tensorflow_gpu.yml
@@ -280,5 +280,5 @@ dependencies:
   - ruamel-yaml==0.15.35
   - tables==3.4.2
   - tensorflow==1.7.0
-prefix: /home/pt/anaconda3/envs/tensorflow_gpu
+prefix: ~/anaconda3/envs/tensorflow_gpu
 
