--- a/Anaconda_Setup/linux_tensorflow_gpu.yml
+++ b/Anaconda_Setup/linux_tensorflow_gpu.yml
@@ -257,6 +257,7 @@ dependencies:
 - wcwidth=0.1.7=py36hdf4376a_0
 - webencodings=0.5.1=py36h800622e_1
 - werkzeug=0.14.1=py36_0
+- wget=1.19.4=hf388c53_0
 - wheel=0.30.0=py36hfd4bba0_1
 - widgetsnbextension=3.1.0=py36_0
 - wrapt=1.10.11=py36h28b7045_0
